els no creadors poden editar attachments, assigneds y watchers
